# airtable-rs

./: Cargo.toml
src/: lib.rs
