[package]
name = "airtable"
edition = "2018"
version = "0.2.0"
authors = ["Simon Eskildsen <sirup@sirupsen.com>"]
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
description = "Airtable API wrapper."
documentation = "https://github.com/sirupsen/airtable-rs"
homepage = "https://github.com/sirupsen/airtable-rs"
repository = "https://github.com/sirupsen/airtable-rs"
readme = "README.md"

[dependencies]
reqwest = {version = "0.11.2", features= ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
futures = "0.3"

[dev-dependencies]
mockito = "0.30.0"
dotenv = "0.15.0"
