[package]
name = "airtable"
edition = "2018"
version = "0.2.1"
authors = ["Simon Eskildsen <sirup@sirupsen.com>"]
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
description = "Airtable API wrapper."
documentation = "https://github.com/sirupsen/airtable-rs"
homepage = "https://github.com/sirupsen/airtable-rs"
repository = "https://github.com/sirupsen/airtable-rs"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
ureq = {version = "2.1.0", features = ["json"]}
anyhow = "1.0.40"